@@ -288,6 +288,7 @@ export(median_hilow)
 export(position_dodge)
 export(position_fill)
 export(position_identity)
+export(position_injitter)
 export(position_jitter)
 export(position_jitterdodge)
 export(position_nudge)
