@@ -43,6 +43,7 @@ p + geom_errorbar(aes(ymin = y-1, ymax = y+1, width = 0.2),
 \seealso{
 Other position adjustments: \code{\link{position_fill}};
   \code{\link{position_identity}};
+  \code{\link{position_injitter}};
   \code{\link{position_jitterdodge}};
   \code{\link{position_jitter}};
   \code{\link{position_nudge}};
