@@ -42,6 +42,7 @@ ggplot(mpg, aes(class, hwy)) +
 Other position adjustments: \code{\link{position_dodge}};
   \code{\link{position_fill}};
   \code{\link{position_identity}};
+  \code{\link{position_injitter}};
   \code{\link{position_jitterdodge}};
   \code{\link{position_nudge}};
   \code{\link{position_stack}}
