@@ -31,6 +31,7 @@ ggplot(df, aes(x, y)) +
 Other position adjustments: \code{\link{position_dodge}};
   \code{\link{position_fill}};
   \code{\link{position_identity}};
+  \code{\link{position_injitter}};
   \code{\link{position_jitterdodge}};
   \code{\link{position_jitter}};
   \code{\link{position_stack}}
